add no no effect login

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   <title>Animations</title>
 </head>
 <body>
-  <div class="login">
-    <form class="form-login">
+    <form id="form" class="form-login">
       <h1>Login</h1>
-      <input type="text">
-      <input type="text">
-      <button>Login</button>
-      <button>Registrar</button>
+      <input id="name" type="text">
+      <input id="password" type="password">
+      <button id="entrar">Login</button>
+      <button id="btn-login">Registrar</button>
     </form>
-  </div>
+  <script src="app.js"></script>
 </body>
 </html>
